@@ -3,6 +3,7 @@ libmpdclient 2.17 (not yet released)
 * support MPD protocol 0.22
   - "getfingerprint"
 * mpd_async_set_keepalive() returns bool
+* mpd_connection_set_keepalive() returns bool
 * fix build failure on Haiku
 
 libmpdclient 2.16 (2018/10/09)
